# sor_patcher

./: .gitignore  README.MD  setup.cfg  setup.py
src/: patcher.py
src/data/: __init__.py  patches.py
src/data/asm/: __init__.py  init_sram_func.asm  jmp_to_randomizer_loop.asm  randomizer_loop.asm  skip_to_main_menu.asm  skip_to_options.asm  timeout_client_connection.asm  utils_functions.asm
src/file_formats/: smd.py
src/patches/: __init__.py  game_patches.py
src/patches/base_patches/: constants.py  randomizer_loop.py  skip_to_options.py  sram_patch.py  timeout_client_func.py  utils_functions.py
src/utils/: buffered_reader_be.py  buffered_writer_be.py  byteutils.py  padding.py  parser.py
