[metadata]
name = sor_patcher
description = Game patcher for Streets of Rage/Bare Knuckle
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = sor_patcher

include_package_data = True
zip_safe = False

python_requires = >=3.12

[bdist_wheel]
py_limited_api = cp312